Updated some files

--- a/campaign/characters/non-player/Finnegan_Finn_Sharblade.html
+++ b/campaign/characters/non-player/Finnegan_Finn_Sharblade.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   Finnegan "Finn" Sharblade
+   Finnegan Finn Sharblade
   </title>
   <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
