--- a/campaign/creatures/critters/index.html
+++ b/campaign/creatures/critters/index.html
@@ -56,6 +56,26 @@
      </a>
     </li>
     <li>
+     <a href="feathered_fluttercrab.html">
+      feathered fluttercrab
+     </a>
+    </li>
+    <li>
+     <a href="glimmerfinch_swarmer.html">
+      glimmerfinch swarmer
+     </a>
+    </li>
+    <li>
+     <a href="mossbacked_skittermole.html">
+      mossbacked skittermole
+     </a>
+    </li>
+    <li>
+     <a href="velvetine_sandlizard.html">
+      velvetine sandlizard
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/coconatus_marmotta (1).jpg">
       <i class="fas fa-camera">
       </i>
