--- a/campaign/items/armor/index.html
+++ b/campaign/items/armor/index.html
@@ -50,6 +50,26 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="bone_and_hide_cuirass.html">
+      bone and hide cuirass
+     </a>
+    </li>
+    <li>
+     <a href="chain_sleeved_tunic.html">
+      chain sleeved tunic
+     </a>
+    </li>
+    <li>
+     <a href="iron_plated_brigandine.html">
+      iron plated brigandine
+     </a>
+    </li>
+    <li>
+     <a href="studded_boarhide_vest.html">
+      studded boarhide vest
+     </a>
+    </li>
    </ul>
   </div>
  </body>
