--- a/campaign/items/armor/studded_boarhide_vest.html
+++ b/campaign/items/armor/studded_boarhide_vest.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>studded boarhide vest</h1></div><hr><div class="dnd-info"><h3>Studded Boarhide Vest</h3><p class="first-paragraph">A rugged vest crafted from boar hide, studded with iron rivets for added protection. Grants AC 12 + Dex modifier, weighs 8 lbs, and costs 20 gp. The coarse hide resists wear, doubling the time it takes for the armor to degrade from environmental damage (e.g., rust or rot).
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   studded boarhide vest
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    studded boarhide vest
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Studded Boarhide Vest
+   </h3>
+   <p class="first-paragraph">
+    A rugged vest crafted from boar hide, studded with iron rivets for added protection. Grants AC 12 + Dex modifier, weighs 8 lbs, and costs 20 gp. The coarse hide resists wear, doubling the time it takes for the armor to degrade from environmental damage (e.g., rust or rot).
+   </p>
+  </div>
+ </body>
 </html>
