--- a/campaign/items/books/index.html
+++ b/campaign/items/books/index.html
@@ -70,6 +70,31 @@
       The Book Of Celestas
      </a>
     </li>
+    <li>
+     <a href="almanac_of_obscure_festivals.html">
+      almanac of obscure festivals
+     </a>
+    </li>
+    <li>
+     <a href="codex_of_forgotten_recipes.html">
+      codex of forgotten recipes
+     </a>
+    </li>
+    <li>
+     <a href="ledger_of_the_crimson_merchant.html">
+      ledger of the crimson merchant
+     </a>
+    </li>
+    <li>
+     <a href="tattered_journal_of_a_lost_traveler.html">
+      tattered journal of a lost traveler
+     </a>
+    </li>
+    <li>
+     <a href="treatise_on_the_common_toad.html">
+      treatise on the common toad
+     </a>
+    </li>
    </ul>
   </div>
  </body>
