--- a/campaign/items/consumables/food/index.html
+++ b/campaign/items/consumables/food/index.html
@@ -141,6 +141,36 @@
      </a>
     </li>
     <li>
+     <a href="honeyed_locust_cakes.html">
+      honeyed locust cakes
+     </a>
+    </li>
+    <li>
+     <a href="pickled_glowcap_mushrooms.html">
+      pickled glowcap mushrooms
+     </a>
+    </li>
+    <li>
+     <a href="salted_root_mash.html">
+      salted root mash
+     </a>
+    </li>
+    <li>
+     <a href="smoked_fox_jerky.html">
+      smoked fox jerky
+     </a>
+    </li>
+    <li>
+     <a href="spiced_trail_biscuits.html">
+      spiced trail biscuits
+     </a>
+    </li>
+    <li>
+     <a href="the_infinite_apple.html">
+      the infinite apple
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Dawnfruit (1).jpg">
       <i class="fas fa-camera">
       </i>
