--- a/campaign/items/consumables/food/smoked_fox_jerky.html
+++ b/campaign/items/consumables/food/smoked_fox_jerky.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>smoked fox jerky</h1></div><hr><div class="dnd-info"><h3>Smoked Fox Jerky</h3><p class="first-paragraph">Tough, smoky strips of fox meat cured with salt and hung over a fire, favored by hunters. A bundle of 6 strips costs 1 gp and provides a day’s worth of sustenance.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Skin and slice 1 pound of fox meat into thin strips.</li>
-<li>Rub with 2 tablespoons of salt and let sit for 4 hours.</li>
-<li>Hang over a smoky fire (oak or hickory preferred) and dry for 12 hours until leathery.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   smoked fox jerky
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    smoked fox jerky
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Smoked Fox Jerky
+   </h3>
+   <p class="first-paragraph">
+    Tough, smoky strips of fox meat cured with salt and hung over a fire, favored by hunters. A bundle of 6 strips costs 1 gp and provides a day’s worth of sustenance.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Skin and slice 1 pound of fox meat into thin strips.
+     </li>
+     <li>
+      Rub with 2 tablespoons of salt and let sit for 4 hours.
+     </li>
+     <li>
+      Hang over a smoky fire (oak or hickory preferred) and dry for 12 hours until leathery.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
