--- a/campaign/items/consumables/herbs/bitterroot.html
+++ b/campaign/items/consumables/herbs/bitterroot.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>bitterroot</h1></div><hr><div class="dnd-info"><h3>Bitterroot</h3><p class="first-paragraph">A gnarled, dark brown root found in rocky hillsides, known for its intensely bitter taste and stamina-boosting properties. A single root (enough for one tonic) costs 1 gp and weighs 2 oz.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Locate bitterroot plants in dry, rocky soil, identified by their small, purple flowers.</li>
-<li>Dig carefully around the base to extract the root whole, avoiding breakage.</li>
-<li>Rinse off dirt and dry in the sun for 2 days to preserve its potency.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   bitterroot
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    bitterroot
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Bitterroot
+   </h3>
+   <p class="first-paragraph">
+    A gnarled, dark brown root found in rocky hillsides, known for its intensely bitter taste and stamina-boosting properties. A single root (enough for one tonic) costs 1 gp and weighs 2 oz.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Locate bitterroot plants in dry, rocky soil, identified by their small, purple flowers.
+     </li>
+     <li>
+      Dig carefully around the base to extract the root whole, avoiding breakage.
+     </li>
+     <li>
+      Rinse off dirt and dry in the sun for 2 days to preserve its potency.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
