--- a/campaign/items/consumables/herbs/cloudcap_mushroom.html
+++ b/campaign/items/consumables/herbs/cloudcap_mushroom.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>cloudcap mushroom</h1></div><hr><div class="dnd-info"><h3>Cloudcap Mushroom</h3><p class="first-paragraph">A rare, gray-capped mushroom that thrives in damp caves, known for enhancing perception when processed. One mushroom (enough for one extract) costs 2 gp and weighs 3 oz.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Search for cloudcap mushrooms in dark, moist caverns, growing on rocky walls.</li>
-<li>Cut the caps cleanly with a knife, leaving the stem to regrow.</li>
-<li>Dry the caps in a ventilated bag for 3 days to prevent rot while retaining potency.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   cloudcap mushroom
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    cloudcap mushroom
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Cloudcap Mushroom
+   </h3>
+   <p class="first-paragraph">
+    A rare, gray-capped mushroom that thrives in damp caves, known for enhancing perception when processed. One mushroom (enough for one extract) costs 2 gp and weighs 3 oz.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Search for cloudcap mushrooms in dark, moist caverns, growing on rocky walls.
+     </li>
+     <li>
+      Cut the caps cleanly with a knife, leaving the stem to regrow.
+     </li>
+     <li>
+      Dry the caps in a ventilated bag for 3 days to prevent rot while retaining potency.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
