--- a/campaign/items/consumables/herbs/index.html
+++ b/campaign/items/consumables/herbs/index.html
@@ -131,6 +131,31 @@
      </a>
     </li>
     <li>
+     <a href="bitterroot.html">
+      bitterroot
+     </a>
+    </li>
+    <li>
+     <a href="cloudcap_mushroom.html">
+      cloudcap mushroom
+     </a>
+    </li>
+    <li>
+     <a href="clover.html">
+      clover
+     </a>
+    </li>
+    <li>
+     <a href="ember_pepper.html">
+      ember pepper
+     </a>
+    </li>
+    <li>
+     <a href="pine_resin.html">
+      pine resin
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/desert_sage (1).jpg">
       <i class="fas fa-camera">
       </i>
