--- a/campaign/items/consumables/herbs/pine_resin.html
+++ b/campaign/items/consumables/herbs/pine_resin.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>pine resin</h1></div><hr><div class="dnd-info"><h3>Pine Resin</h3><p class="first-paragraph">A sticky, amber sap collected from pine trees, used for its adhesive and healing properties. A small lump (enough for one balm) costs 3 sp and weighs 1 oz.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Locate a mature pine tree and make a shallow cut in the bark with a sharp blade.</li>
-<li>Collect the oozing resin in a small container over 1 hour.</li>
-<li>Store in a sealed jar and keep cool to prevent it from hardening prematurely.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   pine resin
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    pine resin
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Pine Resin
+   </h3>
+   <p class="first-paragraph">
+    A sticky, amber sap collected from pine trees, used for its adhesive and healing properties. A small lump (enough for one balm) costs 3 sp and weighs 1 oz.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Locate a mature pine tree and make a shallow cut in the bark with a sharp blade.
+     </li>
+     <li>
+      Collect the oozing resin in a small container over 1 hour.
+     </li>
+     <li>
+      Store in a sealed jar and keep cool to prevent it from hardening prematurely.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
