--- a/campaign/items/consumables/potions/cloudcap_extract.html
+++ b/campaign/items/consumables/potions/cloudcap_extract.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>cloudcap extract</h1></div><hr><div class="dnd-info"><h3>Cloudcap Extract</h3><p class="first-paragraph">A thin, smoky-gray fluid in a glass phial, derived from rare mushrooms. When ingested, it sharpens the senses, granting a +2 bonus to Wisdom (Perception) checks for 1 hour. Costs 6 gp per phial, but causes mild dizziness afterward.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Slice 2 cloudcap mushrooms thinly and soak in 1 cup of warm water for 1 hour.</li>
-<li>Boil the mixture down to half its volume, about 20 minutes.</li>
-<li>Cool, filter out solids, and store in a glass phial with a tight stopper.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   cloudcap extract
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    cloudcap extract
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Cloudcap Extract
+   </h3>
+   <p class="first-paragraph">
+    A thin, smoky-gray fluid in a glass phial, derived from rare mushrooms. When ingested, it sharpens the senses, granting a +2 bonus to Wisdom (Perception) checks for 1 hour. Costs 6 gp per phial, but causes mild dizziness afterward.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Slice 2
+      <a href="../herbs/cloudcap_mushroom.html">
+       cloudcap mushroom
+      </a>
+      thinly and soak in 1 cup of warm water for 1 hour.
+     </li>
+     <li>
+      Boil the mixture down to half its volume, about 20 minutes.
+     </li>
+     <li>
+      Cool, filter out solids, and store in a glass phial with a tight stopper.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
