--- a/campaign/items/consumables/potions/index.html
+++ b/campaign/items/consumables/potions/index.html
@@ -50,6 +50,31 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="bitterroot_tonic.html">
+      bitterroot tonic
+     </a>
+    </li>
+    <li>
+     <a href="cloudcap_extract.html">
+      cloudcap extract
+     </a>
+    </li>
+    <li>
+     <a href="ember_pepper_draught.html">
+      ember pepper draught
+     </a>
+    </li>
+    <li>
+     <a href="pine_resin_balm.html">
+      pine resin balm
+     </a>
+    </li>
+    <li>
+     <a href="soothing_clover_elixir.html">
+      soothing clover elixir
+     </a>
+    </li>
    </ul>
   </div>
  </body>
