--- a/campaign/items/consumables/potions/pine_resin_balm.html
+++ b/campaign/items/consumables/potions/pine_resin_balm.html
@@ -1,13 +1,87 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>pine resin balm</h1></div><hr><div class="dnd-info"><h3>Pine Resin Balm</h3><p class="first-paragraph">A thick, amber-colored salve in a small tin, made from pine sap and oils. Applying it to minor wounds stabilizes the user (as if succeeding on a death saving throw) if they’re at 0 hit points. Costs 2 gp per tin, single use.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Melt 1 ounce of pine resin with 1 tablespoon of lard over low heat.</li>
-<li>Stir in 1 teaspoon of crushed lavender until fully blended.</li>
-<li>Pour into a tin and let harden for 4 hours before sealing.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   pine resin balm
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    pine resin balm
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Pine Resin Balm
+   </h3>
+   <p class="first-paragraph">
+    A thick, amber-colored salve in a small tin, made from pine sap and oils. Applying it to minor wounds stabilizes the user (as if succeeding on a death saving throw) if they’re at 0 hit points. Costs 2 gp per tin, single use.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Melt 1 ounce of
+      <a href="../herbs/pine_resin.html">
+       pine resin
+      </a>
+      with 1 tablespoon of lard over low heat.
+     </li>
+     <li>
+      Stir in 1 teaspoon of crushed lavender until fully blended.
+     </li>
+     <li>
+      Pour into a tin and let harden for 4 hours before sealing.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
