--- a/campaign/items/consumables/potions/soothing_clover_elixir.html
+++ b/campaign/items/consumables/potions/soothing_clover_elixir.html
@@ -1,13 +1,99 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>soothing clover elixir</h1></div><hr><div class="dnd-info"><h3>Soothing Clover Elixir</h3><p class="first-paragraph">A pale green mixture in a stoppered flask, made from clover and mint. When consumed, it calms the nerves, granting advantage on saving throws against being frightened for 30 minutes. Costs 3 gp per flask.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Crush 2 handfuls of fresh clover leaves and 1 handful of mint into a paste.</li>
-<li>Steep the paste in 1 cup of hot water for 15 minutes.</li>
-<li>Filter through cloth, add a pinch of honey, and pour into a flask.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   soothing clover elixir
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    soothing
+    <a href="../herbs/clover.html">
+     clover
+    </a>
+    elixir
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Soothing
+    <a href="../herbs/clover.html">
+     clover
+    </a>
+    Elixir
+   </h3>
+   <p class="first-paragraph">
+    A pale green mixture in a stoppered flask, made from
+    <a href="../herbs/clover.html">
+     clover
+    </a>
+    and mint. When consumed, it calms the nerves, granting advantage on saving throws against being frightened for 30 minutes. Costs 3 gp per flask.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Crush 2 handfuls of fresh
+      <a href="../herbs/clover.html">
+       clover
+      </a>
+      leaves and 1 handful of mint into a paste.
+     </li>
+     <li>
+      Steep the paste in 1 cup of hot water for 15 minutes.
+     </li>
+     <li>
+      Filter through cloth, add a pinch of honey, and pour into a flask.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
