--- a/campaign/items/magic/amulet_of_awkward_compliments.html
+++ b/campaign/items/magic/amulet_of_awkward_compliments.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>amulet of awkward compliments</h1></div><hr><div class="dnd-info"><h3>Amulet Of Awkward Compliments</h3><p class="first-paragraph">A gaudy necklace that, once per day (at a random time), forces the wearer to loudly compliment the nearest creature (friend or foe) in the most awkward way possible (e.g., "Your scales glisten like greasy tavern spoons!"). Grants +1 to Charisma (Persuasion) checks for 1 hour after use, but the complimented creature might react unpredictably.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   amulet of awkward compliments
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    amulet of awkward compliments
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Amulet Of Awkward Compliments
+   </h3>
+   <p class="first-paragraph">
+    A gaudy necklace that, once per day (at a random time), forces the wearer to loudly compliment the nearest creature (friend or foe) in the most awkward way possible (e.g., "Your scales glisten like greasy tavern spoons!"). Grants +1 to Charisma (Persuasion) checks for 1 hour after use, but the complimented creature might react unpredictably.
+   </p>
+  </div>
+ </body>
 </html>
