--- a/campaign/items/magic/cloak_of_minor_mischief.html
+++ b/campaign/items/magic/cloak_of_minor_mischief.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>cloak of minor mischief</h1></div><hr><div class="dnd-info"><h3>Cloak Of Minor Mischief</h3><p class="first-paragraph">A tattered cloak that allows the wearer to telekinetically move one small, unattended object (up to 1 lb) up to 10 feet once per short rest. The catch: it typically only works if the movement causes a minor inconvenience, like knocking over a cup or nudging a chair out of place. If the user is in a serious situation or trying to do something important, the cloak may fail or behave unexpectedly. 
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   cloak of minor mischief
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    cloak of minor mischief
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Cloak Of Minor Mischief
+   </h3>
+   <p class="first-paragraph">
+    A tattered cloak that allows the wearer to telekinetically move one small, unattended object (up to 1 lb) up to 10 feet once per short rest. The catch: it typically only works if the movement causes a minor inconvenience, like knocking over a cup or nudging a chair out of place. If the user is in a serious situation or trying to do something important, the cloak may fail or behave unexpectedly.
+   </p>
+  </div>
+ </body>
 </html>
