--- a/campaign/items/magic/index.html
+++ b/campaign/items/magic/index.html
@@ -81,6 +81,66 @@
      </a>
     </li>
     <li>
+     <a href="amulet_of_awkward_compliments.html">
+      amulet of awkward compliments
+     </a>
+    </li>
+    <li>
+     <a href="bag_of_almost_enough.html">
+      bag of almost enough
+     </a>
+    </li>
+    <li>
+     <a href="cloak_of_minor_mischief.html">
+      cloak of minor mischief
+     </a>
+    </li>
+    <li>
+     <a href="gemstone_of_akithera.html">
+      gemstone of akithera
+     </a>
+    </li>
+    <li>
+     <a href="goblet_of_endless_soup.html">
+      goblet of endless soup
+     </a>
+    </li>
+    <li>
+     <a href="pen_of_scribbling.html">
+      pen of scribbling
+     </a>
+    </li>
+    <li>
+     <a href="ring_of_unexpected_scent.html">
+      ring of unexpected scent
+     </a>
+    </li>
+    <li>
+     <a href="rings_of_the_soul_bearers.html">
+      rings of the soul bearers
+     </a>
+    </li>
+    <li>
+     <a href="shifting_scroll.html">
+      shifting scroll
+     </a>
+    </li>
+    <li>
+     <a href="the_infinite_treatesis.html">
+      the infinite treatesis
+     </a>
+    </li>
+    <li>
+     <a href="the_rod_of_word.html">
+      the rod of word
+     </a>
+    </li>
+    <li>
+     <a href="wetland_boots.html">
+      wetland boots
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/The_Puzzle_Box_of_Zytharoth (1).jpg">
       <i class="fas fa-camera">
       </i>
