--- a/campaign/items/treasure/crystal_flask_of_flawless_clarity.html
+++ b/campaign/items/treasure/crystal_flask_of_flawless_clarity.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>crystal flask of flawless clarity</h1></div><hr><div class="dnd-info"><h3>Crystal Flask Of Flawless Clarity</h3><p class="first-paragraph">A beautifully cut crystal flask that catches and refracts light in dazzling patterns. It holds up to 1 pint of liquid and is worth 30 gp due to its craftsmanship. Its fragility makes it a risky carry, but its beauty is undeniable.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   crystal flask of flawless clarity
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    crystal flask of flawless clarity
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Crystal Flask Of Flawless Clarity
+   </h3>
+   <p class="first-paragraph">
+    A beautifully cut crystal flask that catches and refracts light in dazzling patterns. It holds up to 1 pint of liquid and is worth 30 gp due to its craftsmanship. Its fragility makes it a risky carry, but its beauty is undeniable.
+   </p>
+  </div>
+ </body>
 </html>
