--- a/campaign/items/treasure/gilded_skull_of_ancient_origin.html
+++ b/campaign/items/treasure/gilded_skull_of_ancient_origin.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>gilded skull of ancient origin</h1></div><hr><div class="dnd-info"><h3>Gilded Skull Of Ancient Origin</h3><p class="first-paragraph">A small humanoid skull coated in a thin layer of gold leaf, likely from a long-forgotten civilization. Scholars or collectors might pay up to 75 gp for its historical value. Its eerie presence could unsettle the superstitious.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   gilded skull of ancient origin
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    gilded skull of ancient origin
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Gilded Skull Of Ancient Origin
+   </h3>
+   <p class="first-paragraph">
+    A small humanoid skull coated in a thin layer of gold leaf, likely from a long-forgotten civilization. Scholars or collectors might pay up to 75 gp for its historical value. Its eerie presence could unsettle the superstitious.
+   </p>
+  </div>
+ </body>
 </html>
