--- a/campaign/items/treasure/index.html
+++ b/campaign/items/treasure/index.html
@@ -56,6 +56,31 @@
      </a>
     </li>
     <li>
+     <a href="bronze_mirror_of_antique_luster.html">
+      bronze mirror of antique luster
+     </a>
+    </li>
+    <li>
+     <a href="crystal_flask_of_flawless_clarity.html">
+      crystal flask of flawless clarity
+     </a>
+    </li>
+    <li>
+     <a href="gilded_skull_of_ancient_origin.html">
+      gilded skull of ancient origin
+     </a>
+    </li>
+    <li>
+     <a href="ivory_die_of_superb_carving.html">
+      ivory die of superb carving
+     </a>
+    </li>
+    <li>
+     <a href="jeweled_comb_of_exquisite_craftsmanship.html">
+      jeweled comb of exquisite craftsmanship
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/cyrex_gems (1).jpg">
       <i class="fas fa-camera">
       </i>
