--- a/campaign/items/treasure/ivory_die_of_superb_carving.html
+++ b/campaign/items/treasure/ivory_die_of_superb_carving.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>ivory die of superb carving</h1></div><hr><div class="dnd-info"><h3>Ivory Die Of Superb Carving</h3><p class="first-paragraph">A single ivory die, expertly carved with intricate runes instead of numbers. Worth 15 gp due to its craftsmanship, it’s a curiosity that could serve as a gambler’s lucky charm or a collector’s trinket, though it’s impractical for actual games.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   ivory die of superb carving
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    ivory die of superb carving
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Ivory Die Of Superb Carving
+   </h3>
+   <p class="first-paragraph">
+    A single ivory die, expertly carved with intricate runes instead of numbers. Worth 15 gp due to its craftsmanship, it’s a curiosity that could serve as a gambler’s lucky charm or a collector’s trinket, though it’s impractical for actual games.
+   </p>
+  </div>
+ </body>
 </html>
