--- a/campaign/items/treasure/jeweled_comb_of_exquisite_craftsmanship.html
+++ b/campaign/items/treasure/jeweled_comb_of_exquisite_craftsmanship.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>jeweled comb of exquisite craftsmanship</h1></div><hr><div class="dnd-info"><h3>Jeweled Comb Of Exquisite Craftsmanship</h3><p class="first-paragraph">A finely crafted silver comb adorned with tiny, sparkling gemstones. Its intricate design and luxurious materials make it worth 50 gp. When used, it leaves hair impeccably groomed, potentially impressing onlookers in social situations.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   jeweled comb of exquisite craftsmanship
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    jeweled comb of exquisite craftsmanship
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Jeweled Comb Of Exquisite Craftsmanship
+   </h3>
+   <p class="first-paragraph">
+    A finely crafted silver comb adorned with tiny, sparkling gemstones. Its intricate design and luxurious materials make it worth 50 gp. When used, it leaves hair impeccably groomed, potentially impressing onlookers in social situations.
+   </p>
+  </div>
+ </body>
 </html>
