--- a/campaign/items/weapons/index.html
+++ b/campaign/items/weapons/index.html
@@ -71,6 +71,31 @@
      </a>
     </li>
     <li>
+     <a href="bone_tipped_spear.html">
+      bone tipped spear
+     </a>
+    </li>
+    <li>
+     <a href="brass_knuckle_duster.html">
+      brass knuckle duster
+     </a>
+    </li>
+    <li>
+     <a href="serrated_sickle.html">
+      serrated sickle
+     </a>
+    </li>
+    <li>
+     <a href="spiked_oak_club.html">
+      spiked oak club
+     </a>
+    </li>
+    <li>
+     <a href="weighted_fishermans_net.html">
+      weighted fishermans net
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Fang_Of_Azshira.jpg">
       <i class="fas fa-camera">
       </i>
