--- a/campaign/items/weapons/serrated_sickle.html
+++ b/campaign/items/weapons/serrated_sickle.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>serrated sickle</h1></div><hr><div class="dnd-info"><h3>Serrated Sickle</h3><p class="first-paragraph">A farmer’s sickle with a jagged, saw-like edge along its curved blade. Deals 1d4 slashing damage and can be used to cut through light foliage or rope with ease (no mechanical bonus, just flavor). Its utilitarian design keeps it affordable at 1 gp, though it’s less effective against armor.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   serrated sickle
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    serrated sickle
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Serrated Sickle
+   </h3>
+   <p class="first-paragraph">
+    A farmer’s sickle with a jagged, saw-like edge along its curved blade. Deals 1d4 slashing damage and can be used to cut through light foliage or rope with ease (no mechanical bonus, just flavor). Its utilitarian design keeps it affordable at 1 gp, though it’s less effective against armor.
+   </p>
+  </div>
+ </body>
 </html>
