--- a/campaign/notes/stockpile/plots/index.html
+++ b/campaign/notes/stockpile/plots/index.html
@@ -231,13 +231,13 @@
      </a>
     </li>
     <li>
-     <a href="Book_of_Elementary_Mathematics:_Second_Edition_price_history.png">
-      Book of Elementary Mathematics: Second Edition price history.png
+     <a href="Book_of_Elementary_Mathematics_-_Second_Edition_price_history.png">
+      Book of Elementary Mathematics - Second Edition price history.png
      </a>
     </li>
     <li>
-     <a href="Book_of_Elementary_Mathematics:_Third_Edition_price_history.png">
-      Book of Elementary Mathematics: Third Edition price history.png
+     <a href="Book_of_Elementary_Mathematics_-_Third_Edition_price_history.png">
+      Book of Elementary Mathematics - Third Edition price history.png
      </a>
     </li>
     <li>
