--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -136,6 +136,11 @@
      </a>
     </li>
     <li>
+     <a href="Finnegan_Finn_Sharblade.html">
+      Finnegan Finn Sharblade
+     </a>
+    </li>
+    <li>
      <a href="Grik_Sprocketsnatch.html">
       Grik Sprocketsnatch
      </a>
