--- a/campaign/creatures/critters/feathered_fluttercrab.html
+++ b/campaign/creatures/critters/feathered_fluttercrab.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>feathered fluttercrab</h1></div><hr><div class="dnd-info"><h3>Feathered Fluttercrab</h3><p class="first-paragraph">A small, crab-like creature with a hard shell covered in soft, iridescent feathers instead of spines. About the size of a fist, it scuttles along coastlines and can glide short distances (up to 10 feet) using its feather-fans when startled. Harmless but territorial, it snaps its tiny claws (1 bludgeoning damage) if threatened.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   feathered fluttercrab
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    feathered fluttercrab
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Feathered Fluttercrab
+   </h3>
+   <p class="first-paragraph">
+    A small, crab-like creature with a hard shell covered in soft, iridescent feathers instead of spines. About the size of a fist, it scuttles along coastlines and can glide short distances (up to 10 feet) using its feather-fans when startled. Harmless but territorial, it snaps its tiny claws (1 bludgeoning damage) if threatened.
+   </p>
+  </div>
+ </body>
 </html>
