--- a/campaign/creatures/critters/glimmerfinch_swarmer.html
+++ b/campaign/creatures/critters/glimmerfinch_swarmer.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>glimmerfinch swarmer</h1></div><hr><div class="dnd-info"><h3>Glimmerfinch Swarmer</h3><p class="first-paragraph">A tiny, bird-like creature with translucent, shimmering wings and a body no bigger than a walnut. It travels in flocks of 5-10, creating a dazzling display as they flit through trees. They peck at insects (no damage to larger creatures) and scatter in a burst of light when threatened.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   glimmerfinch swarmer
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    glimmerfinch swarmer
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Glimmerfinch Swarmer
+   </h3>
+   <p class="first-paragraph">
+    A tiny, bird-like creature with translucent, shimmering wings and a body no bigger than a walnut. It travels in flocks of 5-10, creating a dazzling display as they flit through trees. They peck at insects (no damage to larger creatures) and scatter in a burst of light when threatened.
+   </p>
+  </div>
+ </body>
 </html>
