--- a/campaign/creatures/critters/mossbacked_skittermole.html
+++ b/campaign/creatures/critters/mossbacked_skittermole.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>mossbacked skittermole</h1></div><hr><div class="dnd-info"><h3>Mossbacked Skittermole</h3><p class="first-paragraph">A mole-like critter with a back covered in thick, living moss that blends into forest floors. Roughly 8 inches long, it digs shallow tunnels and emits a faint, earthy scent to attract mates. It’s skittish but curious, nibbling on roots and leaving behind trails of loose soil (no combat ability).
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   mossbacked skittermole
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    mossbacked skittermole
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Mossbacked Skittermole
+   </h3>
+   <p class="first-paragraph">
+    A mole-like critter with a back covered in thick, living moss that blends into forest floors. Roughly 8 inches long, it digs shallow tunnels and emits a faint, earthy scent to attract mates. It’s skittish but curious, nibbling on roots and leaving behind trails of loose soil (no combat ability).
+   </p>
+  </div>
+ </body>
 </html>
