--- a/campaign/items/armor/bone_and_hide_cuirass.html
+++ b/campaign/items/armor/bone_and_hide_cuirass.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>bone and hide cuirass</h1></div><hr><div class="dnd-info"><h3>Bone And Hide Cuirass</h3><p class="first-paragraph">A tribal armor made from cured animal hides and reinforced with polished bone plates. Offers AC 13 + Dex modifier (max 2), weighs 15 lbs, and costs 25 gp. The bone adornments intimidate foes, granting a +1 bonus to Charisma (Intimidation) checks while worn.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   bone and hide cuirass
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    bone and hide cuirass
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Bone And Hide Cuirass
+   </h3>
+   <p class="first-paragraph">
+    A tribal armor made from cured animal hides and reinforced with polished bone plates. Offers AC 13 + Dex modifier (max 2), weighs 15 lbs, and costs 25 gp. The bone adornments intimidate foes, granting a +1 bonus to Charisma (Intimidation) checks while worn.
+   </p>
+  </div>
+ </body>
 </html>
