--- a/campaign/items/armor/chain_sleeved_tunic.html
+++ b/campaign/items/armor/chain_sleeved_tunic.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>chain sleeved tunic</h1></div><hr><div class="dnd-info"><h3>Chain-Sleeved Tunic</h3><p class="first-paragraph">A lightweight shirt of woven mail covering the arms and shoulders, paired with a padded underlayer. Provides AC 13 + Dex modifier, weighs 12 lbs, and costs 30 gp. Its open design allows full mobility but leaves the legs vulnerable, making it ideal for agile fighters.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   chain sleeved tunic
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    chain sleeved tunic
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Chain-Sleeved Tunic
+   </h3>
+   <p class="first-paragraph">
+    A lightweight shirt of woven mail covering the arms and shoulders, paired with a padded underlayer. Provides AC 13 + Dex modifier, weighs 12 lbs, and costs 30 gp. Its open design allows full mobility but leaves the legs vulnerable, making it ideal for agile fighters.
+   </p>
+  </div>
+ </body>
 </html>
