--- a/campaign/items/armor/iron_plated_brigandine.html
+++ b/campaign/items/armor/iron_plated_brigandine.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>iron plated brigandine</h1></div><hr><div class="dnd-info"><h3>Iron-Plated Brigandine</h3><p class="first-paragraph">A flexible vest of canvas lined with small, overlapping iron plates, riveted for durability. Grants AC 14 + Dex modifier (max 2), weighs 20 lbs, and costs 50 gp. Its construction allows for quiet movement, reducing the Stealth disadvantage penalty to -5 instead of the usual -10.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   iron plated brigandine
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    iron plated brigandine
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Iron-Plated Brigandine
+   </h3>
+   <p class="first-paragraph">
+    A flexible vest of canvas lined with small, overlapping iron plates, riveted for durability. Grants AC 14 + Dex modifier (max 2), weighs 20 lbs, and costs 50 gp. Its construction allows for quiet movement, reducing the Stealth disadvantage penalty to -5 instead of the usual -10.
+   </p>
+  </div>
+ </body>
 </html>
