--- a/campaign/items/books/almanac_of_obscure_festivals.html
+++ b/campaign/items/books/almanac_of_obscure_festivals.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>almanac of obscure festivals</h1></div><hr><div class="dnd-info"><h3>Almanac Of Obscure Festivals</h3><p class="first-paragraph">A dog-eared paperback filled with descriptions of strange holidays celebrated in remote villages. Its quirky details make it worth 8 gp to a bard or cultural enthusiast.
-</p></div><hr><div class="dnd-info"><h3>Summary</h3><p class="first-paragraph">Entries include "The Day of the Falling Loaves," where villagers hurl bread from cliffs to appease river spirits. Another describes "The Whispering Feast," a silent celebration where attendees communicate only in gestures. The almanac’s author admits to inventing some festivals for amusement, leaving readers to guess which are real.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   almanac of obscure festivals
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    almanac of obscure festivals
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Almanac Of Obscure Festivals
+   </h3>
+   <p class="first-paragraph">
+    A dog-eared paperback filled with descriptions of strange holidays celebrated in remote villages. Its quirky details make it worth 8 gp to a bard or cultural enthusiast.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Summary
+   </h3>
+   <p class="first-paragraph">
+    Entries include "The Day of the Falling Loaves," where villagers hurl bread from cliffs to appease river spirits. Another describes "The Whispering Feast," a silent celebration where attendees communicate only in gestures. The almanac’s author admits to inventing some festivals for amusement, leaving readers to guess which are real.
+   </p>
+  </div>
+ </body>
 </html>
