--- a/campaign/items/books/tattered_journal_of_a_lost_traveler.html
+++ b/campaign/items/books/tattered_journal_of_a_lost_traveler.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>tattered journal of a lost traveler</h1></div><hr><div class="dnd-info"><h3>Tattered Journal Of A Lost Traveler</h3><p class="first-paragraph">A weathered leather journal filled with frantic scribbles and crude maps, chronicling a wanderer’s descent into madness while exploring uncharted lands. The pages are stained and brittle, worth 5 gp to a collector of oddities.
-</p></div><hr><div class="dnd-info"><h3>Summary</h3><p class="first-paragraph">The journal begins with optimistic notes about a journey into a dense, unnamed forest, complete with sketches of strange plants. As pages progress, the tone shifts to paranoia, describing unseen watchers and eerie noises. The final entries are incoherent ramblings about a "shining cave" that the author never found, ending mid-sentence.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   tattered journal of a lost traveler
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    tattered journal of a lost traveler
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Tattered Journal Of A Lost Traveler
+   </h3>
+   <p class="first-paragraph">
+    A weathered leather journal filled with frantic scribbles and crude maps, chronicling a wanderer’s descent into madness while exploring uncharted lands. The pages are stained and brittle, worth 5 gp to a collector of oddities.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Summary
+   </h3>
+   <p class="first-paragraph">
+    The journal begins with optimistic notes about a journey into a dense, unnamed forest, complete with sketches of strange plants. As pages progress, the tone shifts to paranoia, describing unseen watchers and eerie noises. The final entries are incoherent ramblings about a "shining cave" that the author never found, ending mid-sentence.
+   </p>
+  </div>
+ </body>
 </html>
