--- a/campaign/items/books/treatise_on_the_common_toad.html
+++ b/campaign/items/books/treatise_on_the_common_toad.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>treatise on the common toad</h1></div><hr><div class="dnd-info"><h3>Treatise On The Common Toad</h3><p class="first-paragraph">A surprisingly heavy volume bound in green cloth, obsessively detailing every aspect of ordinary toads. Its dry prose and excessive diagrams make it a niche item, worth 7 gp to a naturalist.
-</p></div><hr><div class="dnd-info"><h3>Summary</h3><p class="first-paragraph">The book catalogs toad species, their habitats, and mating calls with exhaustive precision. A lengthy chapter debates whether toads possess emotions, concluding they are "stoic but misunderstood." "Practical uses" include a dubious recipe for toad-skin boots and a warning against licking them.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   treatise on the common toad
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    treatise on the common toad
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Treatise On The Common Toad
+   </h3>
+   <p class="first-paragraph">
+    A surprisingly heavy volume bound in green cloth, obsessively detailing every aspect of ordinary toads. Its dry prose and excessive diagrams make it a niche item, worth 7 gp to a naturalist.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Summary
+   </h3>
+   <p class="first-paragraph">
+    The book catalogs toad species, their habitats, and mating calls with exhaustive precision. A lengthy chapter debates whether toads possess emotions, concluding they are "stoic but misunderstood." "Practical uses" include a dubious recipe for toad-skin boots and a warning against licking them.
+   </p>
+  </div>
+ </body>
 </html>
