--- a/campaign/items/consumables/food/honeyed_locust_cakes.html
+++ b/campaign/items/consumables/food/honeyed_locust_cakes.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>honeyed locust cakes</h1></div><hr><div class="dnd-info"><h3>Honeyed Locust Cakes</h3><p class="first-paragraph">Sweet, crunchy cakes made from roasted locusts coated in wild honey, a delicacy in arid regions. A batch of 3 cakes costs 2 gp and provides a quick burst of energy (equivalent to half a day’s rations).
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Roast 1 cup of cleaned locusts over an open flame until crispy, about 10 minutes.</li>
-<li>Melt 3 tablespoons of wild honey with a pinch of salt in a small pot.</li>
-<li>Toss the locusts in the honey mixture, spread on a flat surface, and let cool until hardened.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   honeyed locust cakes
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    honeyed locust cakes
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Honeyed Locust Cakes
+   </h3>
+   <p class="first-paragraph">
+    Sweet, crunchy cakes made from roasted locusts coated in wild honey, a delicacy in arid regions. A batch of 3 cakes costs 2 gp and provides a quick burst of energy (equivalent to half a day’s rations).
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Roast 1 cup of cleaned locusts over an open flame until crispy, about 10 minutes.
+     </li>
+     <li>
+      Melt 3 tablespoons of wild honey with a pinch of salt in a small pot.
+     </li>
+     <li>
+      Toss the locusts in the honey mixture, spread on a flat surface, and let cool until hardened.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
