--- a/campaign/items/consumables/food/pickled_glowcap_mushrooms.html
+++ b/campaign/items/consumables/food/pickled_glowcap_mushrooms.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>pickled glowcap mushrooms</h1></div><hr><div class="dnd-info"><h3>Pickled Glowcap Mushrooms</h3><p class="first-paragraph">A jar of small, faintly luminescent mushrooms pickled in vinegar and herbs, harvested from damp caves. One jar (4 servings) costs 3 gp and adds an eerie glow to meals.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Gather 1 pound of fresh glowcap mushrooms and rinse thoroughly.</li>
-<li>Simmer in a pot with 1 cup of vinegar, 1 teaspoon of dill, and a pinch of garlic for 15 minutes.</li>
-<li>Transfer to a jar, seal tightly, and let sit for at least 3 days before eating.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   pickled glowcap mushrooms
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    pickled glowcap mushrooms
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Pickled Glowcap Mushrooms
+   </h3>
+   <p class="first-paragraph">
+    A jar of small, faintly luminescent mushrooms pickled in vinegar and herbs, harvested from damp caves. One jar (4 servings) costs 3 gp and adds an eerie glow to meals.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Gather 1 pound of fresh glowcap mushrooms and rinse thoroughly.
+     </li>
+     <li>
+      Simmer in a pot with 1 cup of vinegar, 1 teaspoon of dill, and a pinch of garlic for 15 minutes.
+     </li>
+     <li>
+      Transfer to a jar, seal tightly, and let sit for at least 3 days before eating.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
