--- a/campaign/items/consumables/food/salted_root_mash.html
+++ b/campaign/items/consumables/food/salted_root_mash.html
@@ -1,14 +1,86 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>salted root mash</h1></div><hr><div class="dnd-info"><h3>Salted Root Mash</h3><p class="first-paragraph">A thick, savory paste made from boiled roots and coarse salt, stored in clay jars. A single jar (enough for 2 meals) costs 5 sp and is a staple for peasants and soldiers alike.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Boil 3 large turnips, parsnips, or other roots in water until soft, about 30 minutes.</li>
-<li>Mash the roots with 1 tablespoon of coarse salt and a splash of the cooking water.</li>
-<li>Pack into a jar and let cool</li>
-<li>stir in a drizzle of oil if available for extra flavor.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   salted root mash
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    salted root mash
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Salted Root Mash
+   </h3>
+   <p class="first-paragraph">
+    A thick, savory paste made from boiled roots and coarse salt, stored in clay jars. A single jar (enough for 2 meals) costs 5 sp and is a staple for peasants and soldiers alike.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Boil 3 large turnips, parsnips, or other roots in water until soft, about 30 minutes.
+     </li>
+     <li>
+      Mash the roots with 1 tablespoon of coarse salt and a splash of the cooking water.
+     </li>
+     <li>
+      Pack into a jar and let cool
+     </li>
+     <li>
+      stir in a drizzle of oil if available for extra flavor.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
