--- a/campaign/items/consumables/food/spiced_trail_biscuits.html
+++ b/campaign/items/consumables/food/spiced_trail_biscuits.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>spiced trail biscuits</h1></div><hr><div class="dnd-info"><h3>Spiced Trail Biscuits</h3><p class="first-paragraph">A handful of small, hard biscuits infused with a mix of cinnamon and dried peppers, popular among travelers for their long shelf life and zesty kick. One pouch (5 biscuits) costs 1 gp and sustains a person for a day.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Grind 2 cups of coarse flour with a pinch of salt and a teaspoon each of cinnamon and crushed dried peppers.</li>
-<li>Knead in 1/4 cup of water and 2 tablespoons of duck fat until a stiff dough forms.</li>
-<li>Roll into small balls, flatten, and bake on a hot stone for 20 minutes until golden and tough.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   spiced trail biscuits
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    spiced trail biscuits
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Spiced Trail Biscuits
+   </h3>
+   <p class="first-paragraph">
+    A handful of small, hard biscuits infused with a mix of cinnamon and dried peppers, popular among travelers for their long shelf life and zesty kick. One pouch (5 biscuits) costs 1 gp and sustains a person for a day.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Grind 2 cups of coarse flour with a pinch of salt and a teaspoon each of cinnamon and crushed dried peppers.
+     </li>
+     <li>
+      Knead in 1/4 cup of water and 2 tablespoons of duck fat until a stiff dough forms.
+     </li>
+     <li>
+      Roll into small balls, flatten, and bake on a hot stone for 20 minutes until golden and tough.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
