--- a/campaign/items/consumables/herbs/clover.html
+++ b/campaign/items/consumables/herbs/clover.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>clover</h1></div><hr><div class="dnd-info"><h3>Clover</h3><p class="first-paragraph">A specific strain of wild clover with broad, soft leaves, prized for its calming effects when brewed. A handful (enough for one elixir) costs 5 sp and weighs 1 oz.
-</p></div><hr><div class="dnd-list"><h3>Recipe</h3><p><ul>
-<li>Harvest clover from shady meadows, selecting the broadest, greenest leaves.</li>
-<li>Pluck leaves gently to avoid crushing them, gathering at dawn for best freshness.</li>
-<li>Dry the leaves in a cool, dark place for 1 day to maintain their soothing qualities.</li>
-</ul></p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   clover
+  </title>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    clover
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Clover
+   </h3>
+   <p class="first-paragraph">
+    A specific strain of wild clover with broad, soft leaves, prized for its calming effects when brewed. A handful (enough for one elixir) costs 5 sp and weighs 1 oz.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-list">
+   <h3>
+    Recipe
+   </h3>
+   <p>
+    <ul>
+     <li>
+      Harvest clover from shady meadows, selecting the broadest, greenest leaves.
+     </li>
+     <li>
+      Pluck leaves gently to avoid crushing them, gathering at dawn for best freshness.
+     </li>
+     <li>
+      Dry the leaves in a cool, dark place for 1 day to maintain their soothing qualities.
+     </li>
+    </ul>
+   </p>
+  </div>
+ </body>
 </html>
