--- a/campaign/items/magic/goblet_of_endless_soup.html
+++ b/campaign/items/magic/goblet_of_endless_soup.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>goblet of endless soup</h1></div><hr><div class="dnd-info"><h3>Goblet Of Endless Soup</h3><p class="first-paragraph">A dented tin goblet that, once per day, fills with a lukewarm, mildly flavored vegetable soup (enough for one person). The soup is nourishing but leaves the drinker burping loudly every 10 minutes for the next hour, imposing disadvantage on Stealth checks. To activate this goblet, the dented area must be caressed.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   goblet of endless soup
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    goblet of endless soup
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Goblet Of Endless Soup
+   </h3>
+   <p class="first-paragraph">
+    A dented tin goblet that, once per day, fills with a lukewarm, mildly flavored vegetable soup (enough for one person). The soup is nourishing but leaves the drinker burping loudly every 10 minutes for the next hour, imposing disadvantage on Stealth checks. To activate this goblet, the dented area must be caressed.
+   </p>
+  </div>
+ </body>
 </html>
