--- a/campaign/items/magic/rings_of_the_soul_bearers.html
+++ b/campaign/items/magic/rings_of_the_soul_bearers.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>rings of the soul bearers</h1></div><hr><div class="dnd-info"><h3>Rings Of The Soul Bearers</h3><p class="first-paragraph">Two rings that connect the wearers and give subtle hints of the mood, feelings, or thoughts of the other. This works at any distance. Only one ring is found and the wearabouts of the other is unknown.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   rings of the soul bearers
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    rings of the soul bearers
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Rings Of The Soul Bearers
+   </h3>
+   <p class="first-paragraph">
+    Two rings that connect the wearers and give subtle hints of the mood, feelings, or thoughts of the other. This works at any distance. Only one ring is found and the wearabouts of the other is unknown.
+   </p>
+  </div>
+ </body>
 </html>
