--- a/campaign/items/magic/the_rod_of_word.html
+++ b/campaign/items/magic/the_rod_of_word.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>the rod of word</h1></div><hr><div class="dnd-info"><h3>The Rod Of Word</h3><p class="first-paragraph">This rod has 3 charges and regains one charge per day at sunrise. You can expel one charge to magically replay one sound heard by this rod. The user must be aware of the sound as well and the sound cannot be longer than 10 seconds.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   the rod of word
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    the rod of word
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    The Rod Of Word
+   </h3>
+   <p class="first-paragraph">
+    This rod has 3 charges and regains one charge per day at sunrise. You can expel one charge to magically replay one sound heard by this rod. The user must be aware of the sound as well and the sound cannot be longer than 10 seconds.
+   </p>
+  </div>
+ </body>
 </html>
