--- a/campaign/items/treasure/bronze_mirror_of_antique_luster.html
+++ b/campaign/items/treasure/bronze_mirror_of_antique_luster.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>bronze mirror of antique luster</h1></div><hr><div class="dnd-info"><h3>Bronze Mirror Of Antique Luster</h3><p class="first-paragraph">A polished bronze hand mirror with ornate etchings along its edges, showing signs of age but still functional. Valued at 20 gp, it’s a practical yet elegant item that might appeal to a noble or merchant with an eye for antiques.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   bronze mirror of antique luster
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    bronze mirror of antique luster
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Bronze Mirror Of Antique Luster
+   </h3>
+   <p class="first-paragraph">
+    A polished bronze hand mirror with ornate etchings along its edges, showing signs of age but still functional. Valued at 20 gp, it’s a practical yet elegant item that might appeal to a noble or merchant with an eye for antiques.
+   </p>
+  </div>
+ </body>
 </html>
