--- a/campaign/items/weapons/bone_tipped_spear.html
+++ b/campaign/items/weapons/bone_tipped_spear.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>bone tipped spear</h1></div><hr><div class="dnd-info"><h3>Bone-Tipped Spear</h3><p class="first-paragraph">A simple wooden spear with a sharpened bone head, lashed tightly with sinew. Deals 1d6 piercing damage (or 1d8 if used two-handed), with a range of 20/60 ft when thrown. Primitive but effective, it costs 1 gp and weighs 3 lbs, appealing to hunters or tribal warriors.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   bone tipped spear
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    bone tipped spear
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Bone-Tipped Spear
+   </h3>
+   <p class="first-paragraph">
+    A simple wooden spear with a sharpened bone head, lashed tightly with sinew. Deals 1d6 piercing damage (or 1d8 if used two-handed), with a range of 20/60 ft when thrown. Primitive but effective, it costs 1 gp and weighs 3 lbs, appealing to hunters or tribal warriors.
+   </p>
+  </div>
+ </body>
 </html>
