--- a/campaign/items/weapons/brass_knuckle_duster.html
+++ b/campaign/items/weapons/brass_knuckle_duster.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>brass knuckle duster</h1></div><hr><div class="dnd-info"><h3>Brass Knuckle Duster</h3><p class="first-paragraph">A pair of polished brass rings fitted over the fingers, designed to harden a punch. Deals 1d4 bludgeoning damage as an unarmed strike replacement. Lightweight and concealable (weighs 1 lb, costs 5 gp), it’s favored by brawlers who want a subtle edge in a fistfight.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   brass knuckle duster
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    brass knuckle duster
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Brass Knuckle Duster
+   </h3>
+   <p class="first-paragraph">
+    A pair of polished brass rings fitted over the fingers, designed to harden a punch. Deals 1d4 bludgeoning damage as an unarmed strike replacement. Lightweight and concealable (weighs 1 lb, costs 5 gp), it’s favored by brawlers who want a subtle edge in a fistfight.
+   </p>
+  </div>
+ </body>
 </html>
