--- a/campaign/items/weapons/spiked_oak_club.html
+++ b/campaign/items/weapons/spiked_oak_club.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>spiked oak club</h1></div><hr><div class="dnd-info"><h3>Spiked Oak Club</h3><p class="first-paragraph">A hefty club carved from solid oak, studded with crude iron spikes along one side. Deals 1d4 bludgeoning damage plus 1 piercing damage on a hit. Its rugged construction makes it durable but unwieldy, imposing a -1 penalty to attack rolls for users without proficiency in simple weapons. Costs 2 gp.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   spiked oak club
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    spiked oak club
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Spiked Oak Club
+   </h3>
+   <p class="first-paragraph">
+    A hefty club carved from solid oak, studded with crude iron spikes along one side. Deals 1d4 bludgeoning damage plus 1 piercing damage on a hit. Its rugged construction makes it durable but unwieldy, imposing a -1 penalty to attack rolls for users without proficiency in simple weapons. Costs 2 gp.
+   </p>
+  </div>
+ </body>
 </html>
