--- a/campaign/items/weapons/weighted_fishermans_net.html
+++ b/campaign/items/weapons/weighted_fishermans_net.html
@@ -1,9 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title></title>
-</head>
-<body>
-<div class="dnd-header"><h1>weighted fishermans net</h1></div><hr><div class="dnd-info"><h3>Weighted Fisherman’s Net</h3><p class="first-paragraph">A sturdy net woven from thick rope, with small lead weights sewn into the edges. Functions as a net (simple weapon, 1d4 bludgeoning damage if used as an improvised weapon), but its reinforced design grants a +1 bonus to checks made to restrain a creature of Medium size or smaller. Weighs 5 lbs and costs 10 gp.
-</p></div></body>
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   weighted fishermans net
+  </title>
+  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
+        window.history.back();
+      }
+
+      function goForward() {
+        window.history.forward();
+      }
+
+      function goToIndex() {
+        window.location.href = "./index.html";
+      }
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <div class="dnd-header">
+   <h1>
+    weighted fishermans net
+   </h1>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Weighted Fisherman’s Net
+   </h3>
+   <p class="first-paragraph">
+    A sturdy net woven from thick rope, with small lead weights sewn into the edges. Functions as a net (simple weapon, 1d4 bludgeoning damage if used as an improvised weapon), but its reinforced design grants a +1 bonus to checks made to restrain a creature of Medium size or smaller. Weighs 5 lbs and costs 10 gp.
+   </p>
+  </div>
+ </body>
 </html>
