--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
      .github
     </li>
     <li>
+     <i class="fas fa-folder">
+     </i>
+     .idea
+    </li>
+    <li>
      <a class="dir-index-link" href="campaign/index.html">
       <i class="fas fa-folder">
       </i>
